Upgrade Spring Boot to 3.3.x