@@ -22,6 +22,7 @@ import static com.googlecode.objectify.ObjectifyService.ofy;
 
 import java.io.IOException;
 import java.io.PrintWriter;
+import java.io.Serial;
 import java.net.URI;
 import java.util.ArrayList;
 import java.util.HashMap;
@@ -44,6 +45,7 @@ import com.google.auth.oauth2.GoogleCredentials;
  */
 @WebServlet("/EraseEntity")
 public class EraseEntity extends HttpServlet {
+	@Serial
 	private static final long serialVersionUID = 1L;
        
     protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
@@ -254,11 +256,10 @@ public class EraseEntity extends HttpServlet {
 	 */
 	private void logSecurityEvent(String eventType, HttpServletRequest request) {
 		try {
-			System.err.println(String.format(
-				"SECURITY_EVENT: %s | IP: %s | Time: %s",
-				eventType,
-				getClientIp(request),
-				System.currentTimeMillis()
+			System.err.println("SECURITY_EVENT: %s | IP: %s | Time: %s".formatted(
+			eventType,
+			getClientIp(request),
+			System.currentTimeMillis()
 			));
 		} catch (Exception e) {
 			// Silently fail logging
